final review dao layer / min fix and refactor / delete unnecessary code